# extract

algolia-memo-app/.nuxt/: index.js  router.js  routes.json
extract-data/: 37KAGAWA.CSV  extract.py  pyproject.toml  sonet_list.csv  sonet_list_02.csv  sonet_list_03.csv  sonet_list_04.csv  sonet_list_05.csv
extract-data/tests/: test_extract_data.py
extract-sonet-data/extract-data/: extract.py
vmedia_flutter/: README.md  pubspec.yaml
vmedia_flutter/android/app/: build.gradle
vmedia_flutter/android/app/src/main/: AndroidManifest.xml
vmedia_flutter/android/app/src/main/kotlin/com/example/vmedia_flutter/: MainActivity.kt
vmedia_flutter/android/app/src/profile/: AndroidManifest.xml
vmedia_flutter/ios/Runner/: Info.plist
vmedia_flutter/ios/Runner.xcodeproj/: project.pbxproj
vmedia_flutter/lib/: main.dart
vmedia_flutter/test/: widget_test.dart
vmedia_flutter/web/: index.html  manifest.json
