[tool.poetry]
name = "extract-data"
version = "0.1.0"
description = ""
authors = ["Tomoyo Ito <tmyooo73@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.0.0"
webdriver-manager = "^3.5.1"
chromedriver-binary = "^94.0.4606"
bs4 = "^0.0.1"
black = "^21.9b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
